--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@vitalets/google-translate-api": "^7.0.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "openjtalk" : "*",
     "uuid-v4": "*"
   },
   "devDependencies": {},
