--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "openjtalk" : "*",
+    "cors": "^2.8.5",
+    "ssl-express-www": "^3.0.7",
+    
     "uuid-v4": "*"
   },
   "devDependencies": {},
