--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@vitalets/google-translate-api": "^7.0.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
-    "openjtalk" : "*",
+    "ghopen-jtalk" : "*",
     "cors": "^2.8.5",
     "ssl-express-www": "^3.0.7",
     "uuid-v4": "*"
